--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path=""/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/brownies-collections-0.9.11.jar" sourcepath="lib/brownies-collections-0.9.11-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/javaPrimSearch/lib/brownies-collections-0.9.11-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path=""/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/BigList"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/org.magicwerk.brownies.collections"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
